# shadowed

./: .gitignore  README.md  justfile  lib.typ  typst.toml
.github/workflows/: ci.yaml  tests.yaml
benchmarks/: main.typ  results.md
examples/: examples.typ  fill.typ  layout.typ  lorem.typ  offset.typ  radius.typ  spread.typ
renderer/templates/: shadow.svg.jinja
scripts/: install.py  package.py  templating_string.py  update_examples.py  update_templates.py
src/: lib.typ  renderer.wasm  shadow.svg.template  shadow.svg.template2  shadowed.typ
src/renderer/: Cargo.toml
src/templates/: linear-gradient.svg.template  radial-gradient.svg.template  shadow.svg.template  stop.svg.template
src/templating/: Cargo.toml
src/templating/src/: lib.rs
src/typed/: Cargo.toml  README.md
src/typed/src/: angle.rs  center.rs  color.rs  datetime.rs  duration.rs  gradient.rs  length.rs  lib.rs  radius.rs  ratio.rs  stop.rs  type.rs  version.rs
src/typed/src-typst/: typst.toml
src/typed/src-typst/src/: lib.typ
src/typed/src-typst/src/cbor/: angle.typ  cbor.typ  center.typ  color.typ  datetime.typ  duration.typ  gradient.typ  length.typ  ratio.typ  type.typ  version.typ
tests/conformance/linear-gradient/: ref.typ  test.typ
tests/conformance/linear-gradient-angled/: test.typ
tests/conformance/linear-gradient-sharp/: test.typ
tests/conformance/linear-gradient-spaces/: test.typ
tests/conformance/radial-gradient-center/: test.typ
tests/displacement/: test.typ
tests/examples/: test.typ
tests/grid/: test.typ
tests/wrapping_code/: test.typ
(+20 files in other folders)
